--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
       <div class="box-container">
         <div class="box">
             <h3>about us</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo hic eum veniam aut nisi. Libero autem nemo amet recusandae eveniet Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, tempore.</p>
+            <p>since our first day in business, Oxygenerators.in has been offering our customers the best selection of products price. our online store has became synonymous with quality. take a look out our site and get in touch.</p>
         </div>
         <div class="box">
           <h3>branch locations</h3>
@@ -469,7 +469,7 @@
           <h3>contact info</h3>
           <a href="#"> <i class="fas fa-phone"></i> +91 629 018 2085 </a>
           <a href="#"> <i class="fas fa-phone"></i> +91 969 325 8858 </a>
-          <a href="#">
+          <a href="#"  class="mail">
             <i class="fas fa-envelope"></i> ananyaroy933@gmail.com
           </a>
         </div>
