--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="box" style="background: url(slider2.jpg)">
               <div class="content">
                 <span>upto 45% off</span>
-                <h3>plant make people happy</h3>
+                <h3>plants make people happy</h3>
                 <a href="#" class="btn">shop now</a>
               </div>
             </div>
@@ -477,9 +477,9 @@
 
       <!-- <h1 class="credit"> created by <span> S kay </span> | all rights reserved! </h1> -->
       <footer id="footer2">
-        <i class="social-icon fab fa-facebook-f"></i>
+         <a href="https://www.facebook.com/Oxygeneratorsin-108458558227438/"><i class="social-icon fab fa-facebook-f"></i></a>
         <i class="social-icon fab fa-twitter"></i>
-        <i class="social-icon fab fa-instagram"></i>
+       <a href="https://www.instagram.com/invites/contact/?i=pfmovqgh1i6s&utm_content=mftiain"> <i class="social-icon fab fa-instagram"></i> </a> 
         <i class="social-icon fas fa-envelope"></i>
   
         <p>© Copyright 2021 Oxygenerators | All rights reserved</p>
